// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/Button renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 54,
          "lineHeight": 66,
        },
        Array [
          Object {
            "color": "#FFF",
            "paddingHorizontal": 18,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly 2`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 96,
      "opacity": 1,
      "paddingHorizontal": 36,
      "paddingVertical": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#F54D3D",
          "fontFamily": "Inter-Bold",
          "fontSize": 54,
          "lineHeight": 66,
        },
        Array [
          Object {
            "color": "#FFF",
            "paddingHorizontal": 12,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly destructive 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#F54D3D",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 36,
          "height": 72,
          "justifyContent": "center",
          "minWidth": 72,
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "marginLeft": 6,
          "position": "relative",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 48,
            "lineHeight": 60,
          },
          Object {
            "color": "#F54D3D",
            "paddingHorizontal": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly disabled 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#9BA1B0",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
/>
`;

exports[`@npm/mobydick-core/Button renders correctly fixed 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
/>
`;

exports[`@npm/mobydick-core/Button renders correctly large 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
      "paddingHorizontal": 36,
      "paddingVertical": 36,
    }
  }
/>
`;

exports[`@npm/mobydick-core/Button renders correctly left icon size large 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
      "paddingHorizontal": 78,
      "paddingVertical": 36,
    }
  }
>
  <View />
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 54,
          "lineHeight": 66,
        },
        Array [
          Object {
            "color": "#FFF",
            "paddingHorizontal": 18,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
  <View />
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly left icon size small 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 96,
      "opacity": 1,
      "paddingHorizontal": 42,
      "paddingVertical": 18,
    }
  }
>
  <View />
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 42,
          "lineHeight": 54,
        },
        Array [
          Object {
            "color": "#FFF",
            "paddingHorizontal": 12,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
  <View />
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly left icon small 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 96,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 18,
    }
  }
>
  <View />
  <View />
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "center",
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading disabled  1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#9BA1B0",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "center",
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading types 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "center",
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#2B78EE"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading types 2`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "center",
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#2B78EE"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading types 3`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 36,
          "height": 72,
          "justifyContent": "center",
          "minWidth": 72,
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "marginLeft": 6,
          "position": "relative",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 48,
            "lineHeight": 60,
          },
          Object {
            "color": "#2B78EE",
            "paddingHorizontal": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      23
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading types 4`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 36,
          "height": 72,
          "justifyContent": "center",
          "minWidth": 72,
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "marginLeft": 6,
          "position": "relative",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 48,
            "lineHeight": 60,
          },
          Object {
            "color": "#2B78EE",
            "paddingHorizontal": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      23
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading types 5`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#2B78EE",
          "borderRadius": 36,
          "height": 72,
          "justifyContent": "center",
          "minWidth": 72,
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "marginLeft": 6,
          "position": "relative",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 48,
            "lineHeight": 60,
          },
          Object {
            "color": "#FFF",
            "paddingHorizontal": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      23
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading types 6`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#9BA1B0",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 36,
          "height": 72,
          "justifyContent": "center",
          "minWidth": 72,
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "marginLeft": 6,
          "position": "relative",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 48,
            "lineHeight": 60,
          },
          Object {
            "color": "#9BA1B0",
            "paddingHorizontal": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      23
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading types 7`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "center",
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="24"
      width="24"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading types 8`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#F54D3D",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 36,
          "height": 72,
          "justifyContent": "center",
          "minWidth": 72,
          "position": "absolute",
          "zIndex": 1,
        },
        Object {
          "marginLeft": 6,
          "position": "relative",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        Array [
          Object {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 48,
            "lineHeight": 60,
          },
          Object {
            "color": "#F54D3D",
            "paddingHorizontal": 18,
            "textAlign": "center",
          },
        ]
      }
    >
      23
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly loading without type 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
/>
`;

exports[`@npm/mobydick-core/Button renders correctly secondary 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
/>
`;

exports[`@npm/mobydick-core/Button renders correctly small 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 96,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 18,
    }
  }
/>
`;

exports[`@npm/mobydick-core/Button renders correctly small 2`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 96,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 18,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "center",
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
      height="20"
      width="20"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly tertiary 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 144,
      "opacity": 1,
    }
  }
/>
`;

exports[`@npm/mobydick-core/Button renders correctly text 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 96,
      "opacity": 1,
      "paddingHorizontal": 36,
      "paddingVertical": 18,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 42,
          "lineHeight": 54,
        },
        Array [
          Object {
            "color": "#FFF",
            "paddingHorizontal": 12,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-core/Button renders correctly without size 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2B78EE",
      "borderRadius": 36,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
    }
  }
/>
`;
